# rustykernel

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  pyproject.toml
.github/workflows/: CI.yml  testpypi-nightly.yml
docs/: debugger-redesign-plan.md  ipykernel-compat-matrix.md  known-behavior-differences.md  protocol-baseline.md
python/rustykernel/: __init__.py  app.py  kernelspec.py  worker_main.py  worker_protocol.py
scripts/: benchmark_kernels.py
src/: debug_session.rs  kernel.rs  lib.rs  protocol.rs  worker.rs  worker_protocol.rs  zmq.rs
src/debug/: bridge.rs  cache.rs  dap_client.rs  mod.rs  types.rs
src/kernel/: comms.rs  debug.rs  dispatch.rs  execute.rs  history.rs  io.rs  mod.rs  runtime.rs  state.rs  tests.rs
tests/: compat_harness.py  support.py  test_ipykernel_compat.py  test_kernelspec.py  test_notebook_semantics.py  test_protocol_smoke.py  test_python_api.py
