[package]
name = "rustykernel"
version = "0.1.0"
edition = "2024"
description = "Rust-first Python kernel runtime scaffold for Jupyter-compatible clients"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["auto-initialize"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
