[package]
name = "rustykernel"
version = "0.1.0"
edition = "2024"
description = "Rust-first Python kernel runtime scaffold for Jupyter-compatible clients"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
bytes = "1.10"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
hmac = "0.12"
libc = "0.2"
pyo3 = { version = "0.27.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.37"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18", features = ["v4"] }
zeromq = { version = "0.6.0-pre.1", default-features = true }
